fix background stretch

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,7 +30,7 @@ html {
     background: var(--background-color);
     color: var(--text-color);
     font-family: var(--font-family);
-    height: 100%
+    min-height: 100%
 }
 
 html a {
